documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32.H

typedef void VOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef char * LPSTR;
typedef int HCARD;
typedef int ERRVAL;
typedef short int SHORT;

/**
*
*    PC429 32-BIT DLL Driver procedures.
*
**/

P42W32API USHORT __stdcall PC429_Active(USHORT channels,HCARD handleval);

P42W32API USHORT __stdcall PC429_BrdNum(USHORT brdnum,HCARD handleval);

P42W32API VOID __stdcall PC429_BrdStat(USHORT value,HCARD handleval);

P42W32API HCARD __stdcall PC429_Check(INT memval,INT ioval,INT irqval,INT drqval);

P42W32API USHORT __stdcall PC429_CheckChan(HCARD handleval);

P42W32API VOID __stdcall PC429_CLI(HCARD handleval);

P42W32API VOID __stdcall PC429_Close(HCARD handleval);

P42W32API USHORT __stdcall PC429_ClrMsgFilt(HCARD handleval);

P42W32API SHORT __stdcall PC429_Comm(USHORT command,USHORT count,LPUSHORT value,HCARD handleval);

P42W32API SHORT __stdcall PC429_CommPoll(USHORT command,USHORT count,LPUSHORT value,HCARD handleval);

P42W32API ULONG __stdcall PC429_CreateMsg(HCARD handleval);

P42W32API ULONG __stdcall PC429_DecRdData(USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall PC429_DecRdErr(USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall PC429_DecRdOvf(USHORT channel,HCARD handleval);

P42W32API ULONG __stdcall PC429_DecRdSeq(USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall PC429_DecRdSrq(USHORT channel,HCARD handleval);

P42W32API VOID __stdcall PC429_DecWrCtrl(USHORT value,USHORT channel,HCARD handleval);

P42W32API VOID __stdcall PC429_DecWrReset(USHORT value,USHORT channel,HCARD handleval);

P42W32API INT __stdcall PC429_DllUsageCount(VOID);

P42W32API USHORT __stdcall PC429_ElapseClk(USHORT channels,HCARD handleval);

P42W32API USHORT __stdcall PC429_EncRdOvf(USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall PC429_EncRdSrq(USHORT channel,HCARD handleval);

P42W32API VOID __stdcall PC429_EncWrCtrl(USHORT value,USHORT channel,HCARD handleval);

P42W32API VOID __stdcall PC429_EncWrData(ULONG value,USHORT channel,HCARD handleval);

P42W32API VOID __stdcall PC429_EncWrGap(USHORT value,USHORT channel,HCARD handleval);

P42W32API VOID __stdcall PC429_EncWrReset(USHORT value,USHORT channel,HCARD handleval);

P42W32API VOID __stdcall PC429_EncWrSeq(ULONG value,USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall PC429_Error(USHORT channels,HCARD handleval);

P42W32API USHORT __stdcall PC429_Extern(USHORT channels,HCARD handleval);

P42W32API VOID __stdcall PC429_FreeDrv(VOID);

P42W32API ULONG __stdcall PC429_FromAscii(LPSTR asciistr,USHORT radixval);

P42W32API VOID __stdcall PC429_Gate(USHORT command,HCARD handleval);

P42W32API ULONG __stdcall PC429_GetBCDData(ULONG msgval,USHORT msb,USHORT lsb);

P42W32API ULONG __stdcall PC429_GetBCDMant(ULONG msgval,USHORT sigdig);

P42W32API USHORT __stdcall PC429_GetBCDSign(ULONG msgval);

P42W32API USHORT __stdcall PC429_GetBCDSSM(ULONG msgval);

P42W32API VOID __stdcall PC429_GetBCDVal(LPSTR resultstr,ULONG msgval,USHORT sigdig,LPSTR resolstr);

P42W32API ULONG __stdcall PC429_GetBNRData(ULONG msgval,USHORT msb,USHORT lsb,USHORT twos);

P42W32API ULONG __stdcall PC429_GetBNRMant(ULONG msgval,USHORT sigbit);

P42W32API USHORT __stdcall PC429_GetBNRSign(ULONG msgval);

P42W32API USHORT __stdcall PC429_GetBNRSSM(ULONG msgval);

P42W32API VOID __stdcall PC429_GetBNRVal(LPSTR resultstr,ULONG msgval,USHORT sigbit,LPSTR resolstr);

P42W32API ULONG __stdcall PC429_GetFilt(USHORT labelval,USHORT sdival,USHORT channel,HCARD handleval);

P42W32API ULONG __stdcall PC429_GetFldData(ULONG msgval);

P42W32API USHORT __stdcall PC429_GetFldLabel(ULONG msgval);

P42W32API USHORT __stdcall PC429_GetFldParity(ULONG msgval);

P42W32API USHORT __stdcall PC429_GetFldSDI(ULONG msgval);

P42W32API ULONG __stdcall PC429_GetFldValue(ULONG msgval,USHORT startbit,USHORT endbit);

P42W32API ULONG __stdcall PC429_GetGap(USHORT indexval,USHORT channel,HCARD handleval);

P42W32API ULONG __stdcall PC429_GetMsg(USHORT indexval,USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall PC429_GetMsgCnt(USHORT channel,HCARD handleval);

P42W32API VOID __stdcall PC429_Halt(HCARD handleval);

P42W32API USHORT __stdcall PC429_HighSpeed(USHORT channels,HCARD handleval);

P42W32API ERRVAL __stdcall PC429_Init(VOID);

P42W32API ULONG __stdcall PC429_InsFilt(USHORT labelval,USHORT sdival,USHORT channel,HCARD handleval);

P42W32API ULONG __stdcall PC429_InsMsg(USHORT indexval,ULONG msgval,ULONG gapval,USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall PC429_IsOldBrd(HCARD handleval);

P42W32API USHORT __stdcall PC429_IsRcv(USHORT channel,HCARD handleval);

P42W32API USHORT __stdcall PC429_IsXmit(USHORT channel,HCARD handleval);

P42W32API SHORT __stdcall PC429_Load(LPSTR filename,HCARD handleval);

P42W32API ULONG __stdcall PC429_NameToAddr(LPSTR nameptr,HCARD handleval,LPSTR filename);

P42W32API HCARD __stdcall PC429_Open(INT cardnum);

P42W32API USHORT __stdcall PC429_OscClk(USHORT oscval,HCARD handleval);

P42W32API USHORT __stdcall PC429_Parity(USHORT channels,HCARD handleval);

P42W32API ULONG __stdcall PC429_PeekMsg(ULONG addrval,HCARD handleval);

P42W32API VOID __stdcall PC429_PokeeMsg(ULONG addrval,ULONG msgval,HCARD handleval);

P42W32API VOID __stdcall PC429_PokeMsg(ULONG addrval,ULONG msgval,HCARD handleval);

P42W32API VOID __stdcall PC429_Pulse(HCARD handleval);

P42W32API ULONG __stdcall PC429_PutBCDData(ULONG msgval,ULONG value,USHORT msb,USHORT lsb);

P42W32API ULONG __stdcall PC429_PutBCDMant(ULONG msgval,ULONG value,USHORT sigdig,USHORT sign);

P42W32API ULONG __stdcall PC429_PutBCDSign(ULONG msgval,USHORT sign);

P42W32API ULONG __stdcall PC429_PutBCDSSM(ULONG msgval,USHORT value);

P42W32API ULONG __stdcall PC429_PutBCDVal(LPSTR valuestr,ULONG msgval,USHORT sigdig,LPSTR resolstr);

P42W32API ULONG __stdcall PC429_PutBNRData(ULONG msgval,ULONG value,USHORT msb,USHORT lsb,USHORT twos);

P42W32API ULONG __stdcall PC429_PutBNRMant(ULONG msgval,ULONG value,USHORT sigbit,USHORT twos);

P42W32API ULONG __stdcall PC429_PutBNRSign(ULONG msgval,USHORT sign);

P42W32API ULONG __stdcall PC429_PutBNRSSM(ULONG msgval,USHORT value);

P42W32API ULONG __stdcall PC429_PutBNRVal(LPSTR valuestr,ULONG msgval,USHORT sigbit,LPSTR resolstr);