documentacion/obtenida/ARINC 429/driver and software/PC429-2/API/P42W32NET.VB


    Public Declare Function PC429_Active Lib "P42W32.DLL" Alias "_PC429_Active@8" (ByVal channels As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_BrdNum Lib "P42W32.DLL" Alias "_PC429_BrdNum@8" (ByVal brdnum As Short, ByVal handleval As Integer) As Short
    Public Declare Sub PC429_BrdStat Lib "P42W32.DLL" Alias "_PC429_BrdStat@8" (ByVal value As Short, ByVal handleval As Integer)
    Public Declare Function PC429_Check Lib "P42W32.DLL" Alias "_PC429_Check@16" (ByVal memval As Integer, ByVal ioval As Integer, ByVal irqval As Integer, ByVal drqval As Integer) As Integer
    Public Declare Function PC429_CheckChan Lib "P42W32.DLL" Alias "_PC429_CheckChan@4" (ByVal handleval As Integer) As Short
    Public Declare Sub PC429_CLI Lib "P42W32.DLL" Alias "_PC429_CLI@4" (ByVal handleval As Integer)
    Public Declare Sub PC429_Close Lib "P42W32.DLL" Alias "_PC429_Close@4" (ByVal handleval As Integer)
    Public Declare Function PC429_ClrMsgFilt Lib "P42W32.DLL" Alias "_PC429_ClrMsgFilt@4" (ByVal handleval As Integer) As Short
    Public Declare Function PC429_Comm Lib "P42W32.DLL" Alias "_PC429_Comm@16" (ByVal command As Short, ByVal count As Short, ByRef value As Short, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_CommPoll Lib "P42W32.DLL" Alias "_PC429_CommPoll@16" (ByVal command As Short, ByVal count As Short, ByRef value As Short, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_CreateMsg Lib "P42W32.DLL" Alias "_PC429_CreateMsg@4" (ByVal handleval As Integer) As Integer
    Public Declare Function PC429_DecRdData Lib "P42W32.DLL" Alias "_PC429_DecRdData@8" (ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_DecRdErr Lib "P42W32.DLL" Alias "_PC429_DecRdErr@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_DecRdOvf Lib "P42W32.DLL" Alias "_PC429_DecRdOvf@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_DecRdSeq Lib "P42W32.DLL" Alias "_PC429_DecRdSeq@8" (ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_DecRdSrq Lib "P42W32.DLL" Alias "_PC429_DecRdSrq@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Sub PC429_DecWrCtrl Lib "P42W32.DLL" Alias "_PC429_DecWrCtrl@12" (ByVal value As Short, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub PC429_DecWrReset Lib "P42W32.DLL" Alias "_PC429_DecWrReset@12" (ByVal value As Short, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Function PC429_DllUsageCount Lib "P42W32.DLL" Alias "_PC429_DllUsageCount@0" () As Integer
    Public Declare Function PC429_ElapseClk Lib "P42W32.DLL" Alias "_PC429_ElapseClk@8" (ByVal channels As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_EncRdOvf Lib "P42W32.DLL" Alias "_PC429_EncRdOvf@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_EncRdSrq Lib "P42W32.DLL" Alias "_PC429_EncRdSrq@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Sub PC429_EncWrCtrl Lib "P42W32.DLL" Alias "_PC429_EncWrCtrl@12" (ByVal value As Short, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub PC429_EncWrData Lib "P42W32.DLL" Alias "_PC429_EncWrData@12" (ByVal value As Integer, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub PC429_EncWrGap Lib "P42W32.DLL" Alias "_PC429_EncWrGap@12" (ByVal value As Short, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub PC429_EncWrReset Lib "P42W32.DLL" Alias "_PC429_EncWrReset@12" (ByVal value As Short, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Sub PC429_EncWrSeq Lib "P42W32.DLL" Alias "_PC429_EncWrSeq@12" (ByVal value As Integer, ByVal channel As Short, ByVal handleval As Integer)
    Public Declare Function PC429_Error Lib "P42W32.DLL" Alias "_PC429_Error@8" (ByVal channels As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_Extern Lib "P42W32.DLL" Alias "_PC429_Extern@8" (ByVal channels As Short, ByVal handleval As Integer) As Short
    Public Declare Sub PC429_FreeDrv Lib "P42W32.DLL" Alias "_PC429_FreeDrv@0" ()
    Public Declare Function PC429_FromAscii Lib "P42W32.DLL" Alias "_PC429_FromAscii@8" (ByVal asciistr As String, ByVal radixval As Short) As Integer
    Public Declare Sub PC429_Gate Lib "P42W32.DLL" Alias "_PC429_Gate@8" (ByVal command As Short, ByVal handleval As Integer)
    Public Declare Function PC429_GetBCDData Lib "P42W32.DLL" Alias "_PC429_GetBCDData@12" (ByVal msgval As Integer, ByVal msb As Short, ByVal lsb As Short) As Integer
    Public Declare Function PC429_GetBCDMant Lib "P42W32.DLL" Alias "_PC429_GetBCDMant@8" (ByVal msgval As Integer, ByVal sigdig As Short) As Integer
    Public Declare Function PC429_GetBCDSign Lib "P42W32.DLL" Alias "_PC429_GetBCDSign@4" (ByVal msgval As Integer) As Short
    Public Declare Function PC429_GetBCDSSM Lib "P42W32.DLL" Alias "_PC429_GetBCDSSM@4" (ByVal msgval As Integer) As Short
    Public Declare Sub PC429_GetBCDVal Lib "P42W32.DLL" Alias "_PC429_GetBCDVal@16" (ByVal resultstr As String, ByVal msgval As Integer, ByVal sigdig As Short, ByVal resolstr As String)
    Public Declare Function PC429_GetBNRData Lib "P42W32.DLL" Alias "_PC429_GetBNRData@16" (ByVal msgval As Integer, ByVal msb As Short, ByVal lsb As Short, ByVal twos As Short) As Integer
    Public Declare Function PC429_GetBNRMant Lib "P42W32.DLL" Alias "_PC429_GetBNRMant@8" (ByVal msgval As Integer, ByVal sigbit As Short) As Integer
    Public Declare Function PC429_GetBNRSign Lib "P42W32.DLL" Alias "_PC429_GetBNRSign@4" (ByVal msgval As Integer) As Short
    Public Declare Function PC429_GetBNRSSM Lib "P42W32.DLL" Alias "_PC429_GetBNRSSM@4" (ByVal msgval As Integer) As Short
    Public Declare Sub PC429_GetBNRVal Lib "P42W32.DLL" Alias "_PC429_GetBNRVal@16" (ByVal resultstr As String, ByVal msgval As Integer, ByVal sigbit As Short, ByVal resolstr As String)
    Public Declare Function PC429_GetFilt Lib "P42W32.DLL" Alias "_PC429_GetFilt@16" (ByVal labelval As Short, ByVal sdival As Short, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_GetFldData Lib "P42W32.DLL" Alias "_PC429_GetFldData@4" (ByVal msgval As Integer) As Integer
    Public Declare Function PC429_GetFldLabel Lib "P42W32.DLL" Alias "_PC429_GetFldLabel@4" (ByVal msgval As Integer) As Short
    Public Declare Function PC429_GetFldParity Lib "P42W32.DLL" Alias "_PC429_GetFldParity@4" (ByVal msgval As Integer) As Short
    Public Declare Function PC429_GetFldSDI Lib "P42W32.DLL" Alias "_PC429_GetFldSDI@4" (ByVal msgval As Integer) As Short
    Public Declare Function PC429_GetFldValue Lib "P42W32.DLL" Alias "_PC429_GetFldValue@12" (ByVal msgval As Integer, ByVal startbit As Short, ByVal endbit As Short) As Integer
    Public Declare Function PC429_GetGap Lib "P42W32.DLL" Alias "_PC429_GetGap@12" (ByVal indexval As Short, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_GetMsg Lib "P42W32.DLL" Alias "_PC429_GetMsg@12" (ByVal indexval As Short, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_GetMsgCnt Lib "P42W32.DLL" Alias "_PC429_GetMsgCnt@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Sub PC429_Halt Lib "P42W32.DLL" Alias "_PC429_Halt@4" (ByVal handleval As Integer)
    Public Declare Function PC429_HighSpeed Lib "P42W32.DLL" Alias "_PC429_HighSpeed@8" (ByVal channels As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_Init Lib "P42W32.DLL" Alias "_PC429_Init@0" () As Integer
    Public Declare Function PC429_InsFilt Lib "P42W32.DLL" Alias "_PC429_InsFilt@16" (ByVal labelval As Short, ByVal sdival As Short, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_InsMsg Lib "P42W32.DLL" Alias "_PC429_InsMsg@20" (ByVal indexval As Short, ByVal msgval As Integer, ByVal gapval As Integer, ByVal channel As Short, ByVal handleval As Integer) As Integer
    Public Declare Function PC429_IsOldBrd Lib "P42W32.DLL" Alias "_PC429_IsOldBrd@4" (ByVal handleval As Integer) As Short
    Public Declare Function PC429_IsRcv Lib "P42W32.DLL" Alias "_PC429_IsRcv@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_IsXmit Lib "P42W32.DLL" Alias "_PC429_IsXmit@8" (ByVal channel As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_Load Lib "P42W32.DLL" Alias "_PC429_Load@8" (ByVal filename As String, ByVal handleval As Integer) As Short
    Public Declare Function PC429_NameToAddr Lib "P42W32.DLL" Alias "_PC429_NameToAddr@12" (ByVal nameptr As String, ByVal handleval As Integer, ByVal filename As String) As Integer
    Public Declare Function PC429_Open Lib "P42W32.DLL" Alias "_PC429_Open@4" (ByVal cardnum As Integer) As Integer
    Public Declare Function PC429_OscClk Lib "P42W32.DLL" Alias "_PC429_OscClk@8" (ByVal oscval As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_Parity Lib "P42W32.DLL" Alias "_PC429_Parity@8" (ByVal channels As Short, ByVal handleval As Integer) As Short
    Public Declare Function PC429_PeekMsg Lib "P42W32.DLL" Alias "_PC429_PeekMsg@8" (ByVal addrval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Sub PC429_PokeeMsg Lib "P42W32.DLL" Alias "_PC429_PokeeMsg@12" (ByVal addrval As Integer, ByVal msgval As Integer, ByVal handleval As Integer)
    Public Declare Sub PC429_PokeMsg Lib "P42W32.DLL" Alias "_PC429_PokeMsg@12" (ByVal addrval As Integer, ByVal msgval As Integer, ByVal handleval As Integer)
    Public Declare Sub PC429_Pulse Lib "P42W32.DLL" Alias "_PC429_Pulse@4" (ByVal handleval As Integer)
    Public Declare Function PC429_PutBCDData Lib "P42W32.DLL" Alias "_PC429_PutBCDData@16" (ByVal msgval As Integer, ByVal value As Integer, ByVal msb As Short, ByVal lsb As Short) As Integer
    Public Declare Function PC429_PutBCDMant Lib "P42W32.DLL" Alias "_PC429_PutBCDMant@16" (ByVal msgval As Integer, ByVal value As Integer, ByVal sigdig As Short, ByVal sign As Short) As Integer
    Public Declare Function PC429_PutBCDSign Lib "P42W32.DLL" Alias "_PC429_PutBCDSign@8" (ByVal msgval As Integer, ByVal sign As Short) As Integer
    Public Declare Function PC429_PutBCDSSM Lib "P42W32.DLL" Alias "_PC429_PutBCDSSM@8" (ByVal msgval As Integer, ByVal value As Short) As Integer
    Public Declare Function PC429_PutBCDVal Lib "P42W32.DLL" Alias "_PC429_PutBCDVal@16" (ByVal valuestr As String, ByVal msgval As Integer, ByVal sigdig As Short, ByVal resolstr As String) As Integer
    Public Declare Function PC429_PutBNRData Lib "P42W32.DLL" Alias "_PC429_PutBNRData@20" (ByVal msgval As Integer, ByVal value As Integer, ByVal msb As Short, ByVal lsb As Short, ByVal twos As Short) As Integer
    Public Declare Function PC429_PutBNRMant Lib "P42W32.DLL" Alias "_PC429_PutBNRMant@16" (ByVal msgval As Integer, ByVal value As Integer, ByVal sigbit As Short, ByVal twos As Short) As Integer
    Public Declare Function PC429_PutBNRSign Lib "P42W32.DLL" Alias "_PC429_PutBNRSign@8" (ByVal msgval As Integer, ByVal sign As Short) As Integer
    Public Declare Function PC429_PutBNRSSM Lib "P42W32.DLL" Alias "_PC429_PutBNRSSM@8" (ByVal msgval As Integer, ByVal value As Short) As Integer
    Public Declare Function PC429_PutBNRVal Lib "P42W32.DLL" Alias "_PC429_PutBNRVal@16" (ByVal valuestr As String, ByVal msgval As Integer, ByVal sigbit As Short, ByVal resolstr As String) As Integer
